[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Sprites/Kenney_Boardgame/Spritesheets/diceWhite.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Objects/Dice.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 128, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 32, 32 )

[sub_resource type="CapsuleShape2D" id=9]
radius = 31.0
height = 22.0

[node name="Dice" type="Node2D"]
script = ExtResource( 2 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="StaticBody2D"]
frames = SubResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 8 )

[node name="Area2D" type="Area2D" parent="StaticBody2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D/Area2D"]
position = Vector2( 0, 3 )
shape = SubResource( 9 )

[node name="DiceTicker" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[connection signal="body_entered" from="StaticBody2D/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="DiceTicker" to="." method="_on_DiceTicker_timeout"]
